openshift/bad-workloads/bad-workloads.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bad-workloads
  labels:
    app: bad-workloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v5
  namespace: bad-workloads
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/backend_quarkus'
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: '11'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v5
  template:
    metadata:
      labels:
        app: backend
        version: v5
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/backend:arm
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.05"
            memory: 50Mi
          limits:
            cpu: "0.2"
            memory: 120Mi
        ports:
        - containerPort: 8080
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: false
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v6
  namespace: bad-workloads
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/backend_quarkus'
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: '11'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v6
  template:
    metadata:
      labels:
        app: backend
        version: v6
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/backend:not-valid
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.05"
            memory: 50Mi
          limits:
            cpu: "0.2"
            memory: 120Mi
        ports:
        - containerPort: 8080
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: false
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leak
  namespace: bad-workloads
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app.kubernetes.io/component: leak
    app.kubernetes.io/instance: leak
    app.kubernetes.io/name: leak
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: '17'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leak
  template:
    metadata:
      labels:
        app: leak
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/leak:native
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.05"
            memory: 50Mi
          limits:
            cpu: "0.2"
            memory: 120Mi
        # env:
        #   - name: APP_BACKEND
        #     value: https://httpbin.org/delay/5
        #   - name: APP_VERSION
        #     value: v1
        #   - name: quarkus.log.console.color
        #     value: 'false'
        ports:
        - containerPort: 8080
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: false
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      terminationGracePeriodSeconds: 10
####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-hungry
  namespace: bad-workloads
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app.kubernetes.io/component: memory-hungry
    app.kubernetes.io/instance: memory-hungry
    app.kubernetes.io/name: memory-hungry
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-hungry
  template:
    metadata:
      labels:
        app: memory-hungry
        # maistra.io/expose-route: "true"
    spec:
      volumes:
        - name: vertx
          emptyDir: {}
      containers:
        - name: curl-killer
          image:  registry.redhat.io/openshift4/ose-cli:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          command:
            - /bin/bash
            - -c
            - |
              #!/usr/bin/env bash
              while true; do
                curl http://memory-hungry.bad-workloads.svc.cluster.local:8080/eat/6
                sleep 5
              done

        - volumeMounts:
            - name: vertx
              mountPath: /tmp/vertx-cache
          name: memory-hungry
          image: quay.io/voravitl/leak:native
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.05"
              memory: 60Mi
            limits:
              cpu: "0.1"
              memory: 100Mi
          securityContext:
            seccompProfile: #"RuntimeDefault" or "Localhost"
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          ports:
          - containerPort: 8080
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: memory-hungry
  namespace: bad-workloads
  labels:
    app: memory-hungry
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: memory-hungry
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: memory-hungry
  namespace: bad-workloads
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: memory-hungry
    weight: 100
  wildcardPolicy: None
